Fixed siestermobile image oversize in phone screen , fixed banner h1 text size for phone, fixed available space img not 100% width on mobile phones

--- a/src/components/AvailableSpace.css
+++ b/src/components/AvailableSpace.css
@@ -29,8 +29,14 @@ section#available-space {
   justify-content: center;
   margin: 0 0 1rem 0;
 }
-.available-info{
+.available-info {
   /* display: flex;
   justify-content: center; */
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .space-img img {
+    width: 100% !important;
+  }
 }
