--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -24,6 +24,9 @@ img.home-abs-img {
   top: 25% !important;
   font-family: var(--font);
 }
+/* .main-txt-wrapper h1{
+  font-size: 1rem;
+} */
 .home-banner-btn {
   cursor: pointer;
   width: 160px;
@@ -92,7 +95,7 @@ img.home-abs-img {
   /* edited by me */
   .main-txt-wrapper {
     position: relative !important;
-    top: 400px !important;
+    top: 370px !important;
   }
   #home .carousel.carousel-slider .carousel-item .container {
     /* z-index: 2 !important; */
@@ -116,5 +119,8 @@ img.home-abs-img {
     width: 100% !important;
     z-index: -1 !important;
     right: 0px !important;
+  }
+  .main-txt-wrapper h1 {
+    font-size: 2.5rem;
   }
 }
